[gd_scene load_steps=10 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://art/chars/p2_0.png" type="Texture" id=3]
[ext_resource path="res://sound/246420_1676145-lq.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 55
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=3]
action = "start_game"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 98.0
margin_top = 12.0
margin_right = 198.0
margin_bottom = 112.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_left = 1065.0
margin_right = -24.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 4.0
margin_top = 272.0
margin_right = 4.0
margin_bottom = 350.0
custom_fonts/font = SubResource( 1 )
text = "Something vs Zombies"
align = 1

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="lblStars" type="Label" parent="."]
margin_left = 147.0
margin_right = 332.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="Version" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 1114.0
margin_top = 276.0
margin_right = -12.0
margin_bottom = 354.0
custom_fonts/font = SubResource( 1 )
text = "1.18"
align = 1

[node name="BgColorRect" type="ColorRect" parent="."]
margin_left = 343.0
margin_top = 19.0
margin_right = 1053.0
margin_bottom = 58.0
color = Color( 0.964706, 0.980392, 0.980392, 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 346.0
margin_top = 22.0
margin_right = 1049.0
margin_bottom = 54.0
color = Color( 0, 0.203922, 1, 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 435.0
margin_top = 151.0
margin_right = 1012.0
margin_bottom = 577.0
custom_constants/separation = 30
alignment = 1

[node name="Select" type="Button" parent="VBoxContainer"]
margin_right = 577.0
margin_bottom = 84.0
custom_colors/font_color_disabled = Color( 0.0313726, 0.996078, 0.113725, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 4 )
text = "Select defenders"

[node name="StartButton3" type="Button" parent="VBoxContainer"]
margin_top = 114.0
margin_right = 577.0
margin_bottom = 198.0
custom_colors/font_color_disabled = Color( 0.0313726, 0.996078, 0.113725, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 4 )
text = "Easy"

[node name="StartButton2" type="Button" parent="VBoxContainer"]
margin_top = 228.0
margin_right = 577.0
margin_bottom = 312.0
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 4 )
text = "Medium"

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 342.0
margin_right = 577.0
margin_bottom = 426.0
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 4 )
text = "Hard"

[node name="LinkButton" type="LinkButton" parent="."]
margin_left = 970.0
margin_top = 624.0
margin_right = 1259.0
margin_bottom = 638.0
text = "https://dae-robotics.com/android/policy.html"

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="VBoxContainer/Select" to="." method="on_Select_Button"]
[connection signal="pressed" from="VBoxContainer/StartButton3" to="." method="_on_StartButton3_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton2" to="." method="_on_StartButton2_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
